# gumpi

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  rustfmt.toml
.circleci/: config.yml
ci/: test-game-life.sh
docker/: cpuinfo  docker-compose.yaml  run-tests.sh
docker/hub/: Dockerfile
docker/prov/: .gitignore  Dockerfile  init.sh
examples/: Tutorial.md  game-life.toml  heat_solver.toml
src/: actix.rs  args.rs  async_ctrlc.rs  backend.rs  error.rs  failure_ext.rs  jobconfig.rs  main.rs  session.rs
src/session/: gu_client_ext.rs  gu_struct.rs  mod.rs  mpi.rs
tests/: .gitignore  run-tests.sh  threads.toml
tests/threads/: Makefile  threads.c
