[package]
authors = ["Marcin Mielniczuk <marmistrz.dev@zoho.eu>"]
edition = "2018"
name = "gumpi"
version = "0.1.0"
[dependencies]
actix = "0.8.0"
bytes = "0.4.12"
env_logger = "0.6.1"
failure = "0.1.5"
futures = "0.1.26"
log = "0.4.6"
serde = "1.0.90"
serde_derive = "1.0.90"
structopt = "0.2.15"
tokio = "0.1.18"
tokio-signal = "0.2.7"
toml = "0.5.0"

[dependencies.gu-model]
branch = "feature/gu-client-rpc"
git = "https://github.com/golemfactory/golem-unlimited"

[dependencies.gu-client]
branch = "feature/gu-client-rpc"
git = "https://github.com/golemfactory/golem-unlimited"

[dependencies.gu-hardware]
branch = "feature/gu-client-rpc"
git = "https://github.com/golemfactory/golem-unlimited"
