[package]
authors = ["Marcin Mielniczuk <marmistrz.dev@zoho.eu>"]
edition = "2018"
name = "gumpi"
version = "0.1.0"

[dependencies]
actix = "0.7"
actix-web = "0.7.19"
bytes = "0.4.12"
env_logger = "0.6.1"
failure = "0.1.5"
futures = "0.1.26"
log = "0.4.6"
serde = "1.0.90"
serde_derive = "1.0.90"
structopt = "0.2.15"
tokio = "0.1.18"
tokio-signal = "0.2.7"
toml = "0.5.0"
openssl = "0.10.23"
openssh-keys = "0.4.1"

[dependencies.failure_ext]
version = "0.1.1"
features = ["future_ext"]

[dependencies.gu-client]
branch = "gumpi-docker"
git = "https://github.com/marmistrz/golem-unlimited"

[dependencies.gu-hardware]
branch = "gumpi-docker"
git = "https://github.com/marmistrz/golem-unlimited"
